--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="Select Your Language"
+        android:text="@string/select_language_string"
         android:layout_centerHorizontal="true"
         android:textSize="36sp"
         />
