--- a/app/src/main/res/layout/fragment_word_display.xml
+++ b/app/src/main/res/layout/fragment_word_display.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".WeekDaysFragment">
+   >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
                             android:layout_margin="16dp"
                             android:text="Long defination."
                             android:textColor="@android:color/black"
-                            android:textSize="18sp"
+                            android:textSize="24sp"
                             android:visibility="invisible" />
 
 
@@ -122,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
-                    android:text=" You have mastered 0 out of 50"
+                    android:text=""
                     android:textColor="@android:color/black" />
 
                 <ProgressBar
@@ -136,9 +136,9 @@
                     android:layout_marginBottom="16dp"
                     android:background="@android:color/darker_gray"
                     android:indeterminate="false"
-                    android:max="50"
+
                     android:maxWidth="10dp"
-                    android:min="1"
+
                     android:minWidth="0dp"
                     android:outlineProvider="none"
 
@@ -154,7 +154,7 @@
                     android:layout_below="@id/progressbar_master"
                     android:layout_marginLeft="16dp"
 
-                    android:text=" You are reviewing 0 out of 50"
+                    android:text=""
                     android:textColor="@android:color/black" />
 
                 <ProgressBar
@@ -184,7 +184,7 @@
                     android:layout_below="@id/progressbar_review"
                     android:layout_marginLeft="16dp"
 
-                    android:text=" You are learning 0 out of 50"
+                    android:text=""
                     android:textColor="@android:color/black"
 
                     />
