--- a/app/src/main/res/layout/fragment_word_display.xml
+++ b/app/src/main/res/layout/fragment_word_display.xml
@@ -22,6 +22,7 @@
 
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/word_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
