--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7B1FA2"
+    android:background="#FFA000"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
     tools:context=".Main2Activity">
